<resources>
    <string name="app_name">聚分享</string>
    <string name="splash_text">聚分享\n\n做我们想做的分享</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">旅行</string>
    <string name="menu_book">阅享</string>
    <string name="menu_hot">精选</string>
    <string name="menu_forum">论坛</string>
    <string name="menu_chat">消息</string>
    <string name="menu_share">分享</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about_us">关于我们</string>

    <string name="action_settings">设置</string>

    <string name="action_edit">编辑</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="friend_cricle">好友圈</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="str_login_error">登录遇到问题</string>
    <string name="str_register_now">立即注册</string>
    <string name="str_or">or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">hello_home_fragment</string>
</resources>
