<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_hot" />

        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_forum" />
    </group>

    <item android:title="@null" android:titleCondensed="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about_us" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
